# computer-graphics

./: .gitignore  CG_SetUpLM.sh  CG_SetUpW.bat  CMakeLists.txt  README.md  premake5.lua
lib/: CMakeLists.txt
libS/: CMakeLists.txt
resources/shaders/: basic_v.glsl  fragment.glsl  phong_v.glsl  tex_v.glsl  vertex.glsl
src/: CMakeLists.txt  config.cpp  config.h  main.cpp  structs.cpp  structs.h  ui.cpp
